@@ -1,3 +1,11 @@
+Sun Feb 27 08:51:23 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
+
+	* ace/OS_NS_stdio.cpp (snprintf): Enhanced this function so 
+	  it terminates the string with a null char if it is *exactly* the
+ 	  same length as the buffer.  Thanks to Bruce MacDonald <brucemac
+ 	  at netcomuk dot co dot uk> for reporting this and providing a
+ 	  fix.  This fixes bugid 2058.
+
 Fri Feb 25 18:46:33 2005  Steve Huston  <shuston@riverace.com>
 
 	* ace/Asynch_Pseudo_Task.cpp: Forgot some cleanups for places
